# model-registry

./: .pre-commit-config.yaml  README.md  pyproject.toml  report.md
src/: main.py
src/api/: deps.py  models.py  routes.py  versions.py
src/core/: config.py  database.py
src/models/: models.py
src/repositories/: model_repository.py  version_repository.py
src/schemas/: __init__.py  models.py  versions.py
src/services/: model_service.py  version_service.py
src/storage/: backend.py
tests/: conftest.py  test_compare.py  test_models.py  test_versions.py
