[project]
name = "model-registry"
version = "0.1.0"
description = "HM-02 implementation for MLOps course"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.14.14",
    "ty==0.0.13",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 100
